<resources>
    <string name="app_name">Latest</string>
    <string name="action_bar_text">Latest news</string>
    <string name="developed_by">Developed by Anes Abismail</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="title">Briton who stopped WannaCry attack arrested over separate malware claims</string>
    <string name="date">2017-08-28</string>
    <string name="time">09:02</string>
    <string name="world_section">World</string>
    <string name="sport_section">Sport</string>
    <string name="football_section">Football</string>
    <string name="opinion_section">Opinion</string>
    <string name="culture_section">Culture</string>
    <string name="business_section">Business</string>
    <string name="lifestyle_section">Lifestyle</string>
    <string name="fashion_section">Fashion</string>
    <string name="environment_section">Environment</string>
    <string name="science_section">Science</string>
    <string name="tech_section">Tech</string>
    <string name="travel_section">Travel</string>

    <string name="menu_text">Menu</string>
    <string name="menu_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_connection">No internet connection</string>

</resources>
